<resources>

    <!--Common Strings-->
    <string name="app_name">DigitalClassroom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>


    <!--Parameters related to the registration page -->
    <string name="prompt_name">Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_batch">Batch</string>
    <string name="prompt_year">Year</string>
    <string name="prompt_department">Department</string>
    <string name="prompt_college_id">ID</string>
    <string name="prompt_phone">Mobile No</string>
    <string name="start">START</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="title_activity_trash">TrashActivity</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="grant_permissions">Please grant the required permissions</string>
    <string name="select_picture">Select Picture</string>

    <string name="image_capture_fail">Unable to capture image!</string>
    <string name="title_activity_register">Sign Up</string>

    <string name="title_activity_intro_actvity">Intro_actvity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--This is the intro string for the intro activity I will edit it later-->
    <string name="intro_string">In this app you can do following things : </string>
    <string name="title_activity_create_post">CreatePostActivity</string>
    <string name="title_activity_createpost">CreatepostActivity</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>

    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>


    <!--Parameters related to the assignment page -->
    <string name="assignment">Assignments</string>
    <string name="create_assignment">Create Assignment</string>
    <string name="create_assignment_name">Name</string>
    <string name="create_assignment_due_on">Due On</string>
    <string name="create_assignment_marks">Marks</string>
    <string name="no_attached_file">Attach assignment file</string>
    <string name="old_date_set">Incorrect Due Date</string>
</resources>
